--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">diario-sono</string>
+    <string name="app_name">Diário do sono</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="input_login">Login</string>
     <string name="input_senha">Senha</string>
